# vedas

./: .gitignore  README.md  buildspec.yml  manage.py  pyproject.toml
doc/: Vedasデータ更新表.xlsx  memo.md  proposal.md  qiita.md  ux.md
keith/requirements/: general.txt
keith/viewer/apps/analyzer/: api.py  urls.py  views.py
keith/viewer/config/: urls.py  wsgi.py
keith/viewer/config/settings/: base.py
tool/: create_data_folder.sh  create_html_folder.sh
viewer/: manage.py  wsgi.py
viewer/analyzer/: main.py
viewer/analyzer/company/: common.py  hepco.py  kepco.py  tepco.py
viewer/apps/analyzer/: api.py  urls.py
viewer/apps/analyzer/controller/: chuden.py  controller.py  energia.py  hepco.py  japan.py  kepco.py  kyuden.py  okiden.py  rikuden.py  tepco.py  tohokuepco.py  yonden.py
viewer/apps/analyzer/decorator/: auth.py
viewer/apps/analyzer/function/: checker.py  dataframe.py  file.py  measurement.py  request.py
viewer/apps/analyzer/param/: chuden.json  energia.json  hepco.json  kepco.json  kyuden.json  okiden.json  rikuden.json  tepco.json  tohokuepco.json  yonden.json
viewer/apps/analyzer/service/: chuden.py  energia.py  (+11 more)
viewer/config/: urls.py  wsgi.py
viewer/config/settings/: base.py
viewer/front/: .env.development  .env.production  buildspec.yml  package-lock.json  package.json
viewer/front/public/: index.html  manifest.json
viewer/front/src/: App.js  index.js  react.code-workspace
viewer/requirements/: general.txt
viewer/server/: manage.py
viewer/server/config/: urls.py  wsgi.py
viewer/viewer/: settings.py  urls.py  wsgi.py
(+401 files in other folders)
