[tool.poetry]
name = "vedas"
version = "0.1.0"
description = ""
authors = ["nothing"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.19"
requests = "^2.22.0"
pandas = "^1.5.3"
xlrd = "^2.0.1"
redis = "^4.5.4"
django-cors-headers = "^3.2.0"
slackweb = "^1.0.5"
openpyxl = "^3.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
